Add event logging to console and file download
Add two more buttons to the popup, one of which triggers a log of
running events to the console, and one of which saves the events as JSON
to your computer.

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "js": ["nyt.js"]
     }
   ],
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting", "downloads"],
   "action": {
     "default_popup": "popup.html"
   }
