--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,6 @@
   "permissions": ["storage", "scripting", "downloads"],
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "options_page": "options.html"
 }
