--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -4,7 +4,8 @@
   "version": "0.1",
   "manifest_version": 3,
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "page": "background.html"
   },
   "content_scripts": [
     {
