General code cleanup
The NYT code is pretty messy, start cleaning it up. Split code into
functions, don't rely on referencing script-wide state so much. Use "use
strict";.

Shift away from including common.js as a module, and towards just
expecting each page and content script to run it before running its own
main code. I couldn't get it to work with content scripts as a module.

In documentation, call out the expectations we have about the NYT DOM
more precisely.

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -4,13 +4,12 @@
   "version": "0.1",
   "manifest_version": 3,
   "background": {
-    "service_worker": "background.js",
-    "page": "background.html"
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
       "matches": ["https://www.nytimes.com/crosswords/game/*"],
-      "js": ["nyt.js"]
+      "js": ["common.js", "nyt.js"]
     }
   ],
   "permissions": ["storage", "scripting", "downloads"],
